chore: port catppuccin addon to meteor 1.21.8 compatibility